<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingTop="@dimen/status_bar_padding">

    <android.support.v7.widget.SearchView
        android:id="@+id/search_companies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:queryHint="@string/search_companies_hint"/>

    <FrameLayout
        android:id="@+id/saved_projects"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@android:color/black"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invite"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>
    </LinearLayout>
</LinearLayout>